<?xml version="1.0"?>
<package format="2">
  <name>your_camera_package</name>
  <version>1.0.0</version>
  <description>The your_camera_package package</description>

  <!-- Author -->
  <maintainer email="d9kong@uwaterloo.ca">DavidKong</maintainer>

  <!-- License -->
  <license>MIT</license>
  
  <!-- depend -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>video_stream_opencv</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>video_stream_opencv</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>

  <export>

  </export>
</package>
